src/test/resources/de/monticore/umlcd4a/cocos/mcg/invalid/CD4AC2003.cd
package de.cd4analysis.cocos;

classdiagram CD4AC2003 {
  derived class A;
  / class B;

  static class C;
  
  public static class D;
  
  public / class E;
}
